<resources>
    <string name="app_name">MovieShop</string>

    <!-- Label -->
    <string name="menu_navigation_myanmar_title">Myanmar</string>
    <string name="menu_navigation_imdb">IMDB</string>
    <string name="menu_navigation_english_title">English</string>
    <string name="menu_navigation_about">Abouts</string>

    <string name="sample_text_one">Myanmar</string>
    <string name="sample_text_two">IMDB</string>
    <string name="sample_text_three">English</string>
    <string name="sample_text_four">About</string>

    <!-- Navigation Drawer -->
    <string name="drawer_open">Open</string>
    <string name="drawer_close">Close</string>

    <!-- Abouts -->
    <string name="about_apk_name">Movie Shop</string>
    <string name="about_apk_version">Version : 1.0.1</string>
    <string name="about_apk_description">See the License for the specific language governing permissions and limitations under the License. Lorem ipsum dolor sit amet, consectetuer adipiscing elit.</string>
    <string name="about_contact_title">Contact Information</string>
    <string name="about_phone">Phone</string>
    <string name="about_email">Gmail</string>
    <string name="about_facebook">Facebook</string>
    <string name="about_play_store">NOW! RATE US ON GOOGLE PLAY</string>
    <string name="about_company_name">Copyright@ Sapphire Software Solution</string>

    <string name="splash_company_name">Sapphire</string>
    <string name="sample_text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Alias assumenda, autem culpa cum cupiditate, dolor et, explicabo facere illo iure molestiae omnis quam sapiente ut veniam voluptate voluptatem. Fugit, nostrum! Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ad asperiores consectetur corporis distinctio doloremque et explicabo, impedit ipsa libero maiores nobis quos sunt ullam vero voluptates. Cupiditate delectus ipsam similique!Lorem ipsum dolor sit amet, consectetur adipisicing elit. Alias assumenda, autem culpa cum cupiditate, dolor et, explicabo facere illo iure molestiae omnis quam sapiente ut veniam voluptate voluptatem. Fugit, nostrum! Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ad asperiores consectetur corporis distinctio doloremque et explicabo, impedit ipsa libero maiores nobis quos sunt ullam vero voluptates. Cupiditate delectus ipsam similique!Lorem ipsum dolor sit amet, consectetur adipisicing elit. Alias assumenda, autem culpa cum cupiditate, dolor et, explicabo facere illo iure molestiae omnis quam sapiente ut veniam voluptate voluptatem. Fugit, nostrum! Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ad asperiores consectetur corporis distinctio doloremque et explicabo, impedit ipsa libero maiores nobis quos sunt ullam vero voluptates. Cupiditate delectus ipsam similique!Lorem ipsum dolor sit amet, consectetur adipisicing elit. Alias assumenda, autem culpa cum cupiditate, dolor et, explicabo facere illo iure molestiae omnis quam sapiente ut veniam voluptate voluptatem. Fugit, nostrum! Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ad asperiores consectetur corporis distinctio doloremque et explicabo, impedit ipsa libero maiores nobis quos sunt ullam vero voluptates. Cupiditate delectus ipsam similique!Lorem ipsum dolor sit amet, consectetur adipisicing elit. Alias assumenda, autem culpa cum cupiditate, dolor et, explicabo facere illo iure molestiae omnis quam sapiente ut veniam voluptate voluptatem. Fugit, nostrum! Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ad asperiores consectetur corporis distinctio doloremque et explicabo, impedit ipsa libero maiores nobis quos sunt ullam vero voluptates. Cupiditate delectus ipsam similique!Lorem ipsum dolor sit amet, consectetur adipisicing elit. Alias assumenda, autem culpa cum cupiditate, dolor et, explicabo facere illo iure molestiae omnis quam sapiente ut veniam voluptate voluptatem. Fugit, nostrum! Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ad asperiores consectetur corporis distinctio doloremque et explicabo, impedit ipsa libero maiores nobis quos sunt ullam vero voluptates. Cupiditate delectus ipsam similique!Lorem ipsum dolor sit amet, consectetur adipisicing elit. Alias assumenda, autem culpa cum cupiditate, dolor et, explicabo facere illo iure molestiae omnis quam sapiente ut veniam voluptate voluptatem. Fugit, nostrum! Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ad asperiores consectetur corporis distinctio doloremque et explicabo, impedit ipsa libero maiores nobis quos sunt ullam vero voluptates. Cupiditate delectus ipsam similique!Lorem ipsum dolor sit amet, consectetur adipisicing elit. Alias assumenda, autem culpa cum cupiditate, dolor et, explicabo facere illo iure molestiae omnis quam sapiente ut veniam voluptate voluptatem. Fugit, nostrum! Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ad asperiores consectetur corporis distinctio doloremque et explicabo, impedit ipsa libero maiores nobis quos sunt ullam vero voluptates. Cupiditate delectus ipsam similique!Lorem ipsum dolor sit amet, consectetur adipisicing elit. Alias assumenda, autem culpa cum cupiditate, dolor et, explicabo facere illo iure molestiae omnis quam sapiente ut veniam voluptate voluptatem. Fugit, nostrum! Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ad asperiores consectetur corporis distinctio doloremque et explicabo, impedit ipsa libero maiores nobis quos sunt ullam vero voluptates. Cupiditate delectus ipsam similique!Lorem ipsum dolor sit amet, consectetur adipisicing elit. Alias assumenda, autem culpa cum cupiditate, dolor et, explicabo facere illo iure molestiae omnis quam sapiente ut veniam voluptate voluptatem. Fugit, nostrum! Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ad asperiores consectetur corporis distinctio doloremque et explicabo, impedit ipsa libero maiores nobis quos sunt ullam vero voluptates. Cupiditate delectus ipsam similique!</string>


</resources>
