<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <ImageView
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:layout_gravity="center"
            android:src="@drawable/ic_logo_round"
            tools:ignore="ContentDescription" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/about_apk_name"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/about_apk_version" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="8dp"
            android:gravity="center"
            android:text="@string/about_apk_description"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_margin="8dp"
            android:background="@color/colorDivider" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginBottom="8dp"
            android:textStyle="bold"
            android:padding="8dp"
            android:text="@string/about_contact_title"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:baselineAligned="false"
            android:orientation="horizontal">

            <RelativeLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1">

                <android.support.design.widget.FloatingActionButton
                    android:id="@+id/phone"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:elevation="8dp"
                    android:src="@drawable/ic_cart"
                    android:tint="@color/colorPrimary"
                    app:backgroundTint="@color/colorPrimaryText"
                    app:fabSize="normal"
                    tools:ignore="UnusedAttribute"
                    android:layout_alignParentTop="true"
                    android:layout_alignLeft="@+id/textView"
                    android:layout_alignStart="@+id/textView" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/phone"
                    android:layout_centerHorizontal="true"
                    android:padding="2dp"
                    android:text="@string/about_phone"
                    android:textAppearance="@style/TextAppearance.AppCompat.Small"
                    android:id="@+id/textView" />

            </RelativeLayout>

            <RelativeLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1">

                <android.support.design.widget.FloatingActionButton
                    android:id="@+id/email"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:elevation="8dp"
                    android:src="@drawable/ic_english"
                    android:tint="@color/colorPrimary"
                    app:backgroundTint="@color/colorPrimaryText"
                    tools:ignore="UnusedAttribute" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/email"
                    android:layout_centerHorizontal="true"
                    android:padding="2dp"
                    android:text="@string/about_email"
                    android:textAppearance="@style/TextAppearance.AppCompat.Small" />

            </RelativeLayout>

            <RelativeLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1">

                <android.support.design.widget.FloatingActionButton
                    android:id="@+id/facebook_page"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:elevation="8dp"
                    android:src="@drawable/ic_myanmar"
                    android:tint="@color/colorPrimary"
                    app:backgroundTint="@color/colorPrimaryText"
                    tools:ignore="UnusedAttribute" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/facebook_page"
                    android:layout_centerHorizontal="true"
                    android:padding="2dp"
                    android:text="@string/about_facebook"
                    android:textAppearance="@style/TextAppearance.AppCompat.Small" />

            </RelativeLayout>

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_margin="8dp"
            android:background="@color/colorDivider" />

        <LinearLayout
            android:id="@+id/play_store_link"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical"
            tools:ignore="UseCompoundDrawables">

            <ImageView
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:src="@drawable/google_play_logo"
                tools:ignore="ContentDescription" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingTop="8dp"
                android:layout_gravity="center"
                android:text="@string/about_play_store"/>

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_margin="8dp"
            android:background="@color/colorDivider" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:padding="8dp"
            android:text="@string/about_company_name"/>

    </LinearLayout>

</android.support.v4.widget.NestedScrollView>